# antScript

./: compile.py  functions.md
antScript/: README.md  pyproject.toml
antScript/src/antScript/: compile.py  script.txt  vars.txt
antScript/src/antscript.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
