[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antscript"
version = "0.1.0"
description = "An esolang about ants doing math, compiled in Python"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name="Lynn", email="lynn89sudo@gmail.com" }]
keywords = ["esolang", "ants", "compiler", "language"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.scripts]
antscript = "antScript.compile:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"antScript" = ["*.txt"]
